--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Seven improvisations I should probably be ashamed of :)
 
 <footer>
   <aside>May 10, 2016</aside>
-  <a href="./">Jure Šorn</a>
+  <a href="./">Jure Šorn</a> <small>(apologies to <a href="https://bost.ocks.org/mike/">Mike Bostock</a>)</small>
 </footer>
 
 </body>
