--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Racing game for the terminal.
 Six photographs I am not ashamed of.
 
 <p><a href="https://soundcloud.com/jure-sorn">Music</a><br>
-Seven improvisations I should probably be ashamed of :)
+Six improvisations I should probably be ashamed of :)
 
 
 <footer>
