New hegels picture

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <p><span class="date">June 19, 2016</span><a href="albums/">37 Greatest Albums of All Time<img class="preview" src="albums.png"></a><br>
 
-<p><span class="date">March 16, 2016</span><a href="from-singularity-to-morality/">From Singularity to Morality<img class="preview" src="from-singularity-to-morality.png"></a><br>
+<p><span class="date">March 16, 2016</span><a href="from-singularity-to-morality/">From Singularity to Morality<img class="preview" src="from-singularity-to-morality.jpg"></a><br>
 
 
 <h2><a name="projects" href="#projects">#</a>IT Projects</h2>
