--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 <h1>Jure Šorn</h1>
 
+<p><span class="date">March 25, 2018</span><a href="the-library-of-the-babel/">The Library of the Babel<img class="preview" src="the-library-of-the-babel.jpg"></a><br>
 
 <p><span class="date">May 10, 2017</span><a href="history-of-popular-music/">Did Lamar Just Kill Hip Hop?<img class="preview" src="history-of-popular-music.png"></a><br>
 
