--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <p><span class="date">March 25, 2018</span><a href="the-library-of-the-babel/">The Library of the Babel<img class="preview" src="the-library-of-the-babel.jpg"></a><br>
 
+<p><span class="date">March 14, 2018</span><a href="python-cheatsheet/">Comprehensive Python Cheatsheet<img class="preview" src="comprehensive-python-cheatsheet.jpg"></a><br>
+
 <p><span class="date">May 10, 2017</span><a href="history-of-popular-music/">Did Lamar Just Kill Hip Hop?<img class="preview" src="history-of-popular-music.png"></a><br>
 
 <p><span class="date">March 19, 2017</span><a href="essence-of-singularity/">Essence of Singularity<img class="preview" src="essence-of-singularity.png"></a><br>
