--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 
 <!DOCTYPE html>
 <html class="ocks-org do-not-copy">
-<meta charset="utf-8">
-<meta name="viewport" content="width=760">
-<link rel="canonical" href="https://bost.ocks.org/mike/">
-<link rel="alternate" type="application/rss+xml" title="RSS" href="https://bost.ocks.org/mike/index.rss">
-<title>Jure Šorn</title>
+<head>
+  <meta charset="utf-8">
+  <title>Jure Šorn</title>
+  <link rel="icon" href="web/favicon.png">
+  <meta name="viewport" content="width=760">
+  <link rel="canonical" href="https://bost.ocks.org/mike/">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://bost.ocks.org/mike/index.rss">
+</head>
 <style>
 
 @import url(style.v2.css);
