--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jure Šorn</title>
-  <link rel="icon" href="web/favicon.png">
+  <link rel="icon" href="favicon.png">
   <meta name="viewport" content="width=760">
   <link rel="canonical" href="https://bost.ocks.org/mike/">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="https://bost.ocks.org/mike/index.rss">
