--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
 <h1>Jure Šorn</h1>
 
+<p><span class="date">January 30, 2019</span><a href="best-songs/">Comprehensive Linux Cheatsheet<img class="preview" src="comprehensive-linux-cheatsheet.png"></a><br>
+
 <p><span class="date">April 8, 2018</span><a href="best-songs/">25 Greatest Songs of All Time<img class="preview" src="best-songs.png"></a><br>
 
 <p><span class="date">March 25, 2018</span><a href="the-library-of-the-babel/">The Library of the Babel<img class="preview" src="the-library-of-the-babel.jpg"></a><br>
@@ -83,9 +85,6 @@ Simple 4-bit/1 Hz virtual computer for learning purposes.
 <p><a href="https://github.com/gto76/standard-aliases">Standard Aliases</a><br>
 Attempt at defining standard extension to Linux in form of Bash functions.
 
-<p><a href="https://github.com/gto76/fun-photo-time">Fun Photo Time</a><br>
-Image filtering fun for everyone!
-
 <p><a href="https://github.com/gto76/race">Race!</a><br>
 Racing game for the terminal.
 
@@ -99,7 +98,7 @@ Six improvisations I should probably be ashamed of :)
 
 
 <footer>
-  <aside>May 10, 2016</aside>
+  <aside>January 30, 2019</aside>
   <a href="./">Jure Šorn</a> <small>(apologies to <a href="https://bost.ocks.org/mike/">Mike Bostock</a>)</small>
 </footer>
 
