--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <h1>Jure Šorn</h1>
 
-<p><span class="date">January 30, 2019</span><a href="best-songs/">Comprehensive Linux Cheatsheet<img class="preview" src="comprehensive-linux-cheatsheet.png"></a><br>
+<p><span class="date">January 30, 2019</span><a href="linux-cheatsheet/">Comprehensive Linux Cheatsheet<img class="preview" src="comprehensive-linux-cheatsheet.png"></a><br>
 
 <p><span class="date">April 8, 2018</span><a href="best-songs/">25 Greatest Songs of All Time<img class="preview" src="best-songs.png"></a><br>
 
