Added wfdl to IT projects

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@ Simple 4-bit/1 Hz virtual computer for learning purposes.
 <p><a href="https://github.com/gto76/standard-aliases">Standard Aliases</a><br>
 Attempt at defining standard extension to Linux in form of Bash functions.
 
+<p><a href="https://github.com/gto76/wfdl">WFDL</a><br>
+Watch Face Description Language.
+
 <p><a href="https://github.com/gto76/race">Race!</a><br>
 Racing game for the terminal.
 
