--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@ Simple 4-bit/1 Hz virtual computer for learning purposes.
 Attempt at defining standard extension to Linux in form of Bash functions.
 
 <p><a href="https://github.com/gto76/wfdl">WFDL</a><br>
-Watch Face Description Language.
-
-<p><a href="https://github.com/gto76/race">Race!</a><br>
-Racing game for the terminal.
+Watch face description language.
 
 <h2><a name="art-and-hobby" href="#art-and-hobby">#</a>Art &amp; Hobby</h2>
 
