--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
 <h1>Jure Šorn</h1>
 
-<p><span class="date">November 10, 2020</span><a href="python-cheatsheet/">Comprehensive Python Cheatsheet<img class="preview" src="comprehensive-python-cheatsheet.jpg"></a><br>
+<p><span class="date">December 12, 2020</span><a href="advent-of-code-2020/">Advent of Code 2020<img class="preview" src="advent-of-code-2020.png"></a><br>
+
+<p><span class="date">November 25, 2020</span><a href="python-cheatsheet/">Comprehensive Python Cheatsheet<img class="preview" src="comprehensive-python-cheatsheet.jpg"></a><br>
 
 <p><span class="date">January 30, 2019</span><a href="linux-cheatsheet/">Comprehensive Linux Cheatsheet<img class="preview" src="comprehensive-linux-cheatsheet.png"></a><br>
 
@@ -98,7 +100,7 @@ Six improvisations I should probably be ashamed of :)
 
 
 <footer>
-  <aside>July 2, 2020</aside>
+  <aside>December 12, 2020</aside>
   <a href="./">Jure Šorn</a> <small>(apologies to <a href="https://bost.ocks.org/mike/">Mike Bostock</a>)</small>
 </footer>
 
